--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="header-tops">
+  <header id="header" class="header-tops header-top">
     <div class="container">
 
       <h1><a href="index.html">Penny</a></h1>
@@ -48,27 +48,28 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#header">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#resume">Resume</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="connect.html">connect</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
-      <div class="social-links">
+      <!-- <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
         <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
         <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
         <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
-      </div>
+      </div> -->
 
     </div>
-  </header><!-- End Header -->
+  </header>
+  <!-- End Header -->
+
  <!-- ======= Resume Section ======= -->
- <section id="resume" class="resume">
+ <section id="resume" class="resume section-show">
     <div class="container">
 
       <div class="section-title">
