change my connections to channel
I did this for it to be the same with master branch to allow merging

--- a/connect.html
+++ b/connect.html
@@ -74,7 +74,7 @@
     
           <div class="section-title">
             <h2>connect</h2>
-            <p>My connections </p>
+            <p>channel</p>
           </div>
     
           <div id="messages">
