--- a/front-end/reminders.html
+++ b/front-end/reminders.html
@@ -12,3 +12,25 @@
     <link rel="stylesheet" href="./assets/styles/main.css" />
 
     <title>Thinking of someone?</title>
+  </head>
+  <body>
+      <p>Is there someone that you're thinking of but you haven't reached out to them yet today? Maybe it's been a while since you checked in with one of your friends or famil members.
+          <br>
+          Time to let them know that they're in your thoughts!
+      </p>
+
+
+
+
+
+
+
+
+
+      <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
+</html>
