--- a/front-end/reminders.html
+++ b/front-end/reminders.html
@@ -14,7 +14,7 @@
     <title>Thinking of someone?</title>
   </head>
   <body>
-      <p>Is there someone that you're thinking of but you haven't reached out to them yet today? Maybe it's been a while since you checked in with one of your friends or famil members.
+      <p>Is there someone that you're thinking of but you haven't reached out to them yet today? Maybe it's been a while since you checked in with one of your friends or family members.
           <br>
           Time to let them know that they're in your thoughts!
       </p>
