--- a/front-end/index.html
+++ b/front-end/index.html
@@ -59,12 +59,12 @@
       <div class="col-lg-4">
         <h1 class="font-weight-light">A Penny for your thoughts</h1>
         <hr>
-        <p>Muddling through Covid-19 has been hard! We asked ourselevees 
+        <p>Muddling through Covid-19 has been hard! We asked ourseleves
             how can you stregthen your relationships through meaningful conversation digitally?
             Thats where the idea for 'Penny' grew from. Penny is an interactive chat app designed to 
             let your loved ones know you are thinking of them. 
         </p>
-        <a id="learnmorebutton" class="btn btn-primary" href=".">Learn More</a>
+        <a id="learnmorebutton" class="btn btn-primary" href="./about.html">Learn More</a>
       </div>
       <!-- /.col-md-4 -->
     </div>
@@ -89,7 +89,7 @@
         <div class="card h-100">
           <div class="card-body">
             <img src="./assets/styles/worldwide.png" alt="worldwide" width="60">
-            <p>Make connections worldwide Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+            <p>Chat with your loved ones around the globe, with just the swap of a username </p>
           </div>
           
         </div>
@@ -99,7 +99,8 @@
         <div class="card h-100">
           <div class="card-body">
             <img src="./assets/styles/Creativity.png" alt="worldwide" width="60">
-            <p>Make connections worldwide Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+            <p>We are all about meaningful communication. Just you and the person you want to contact. 
+                No need to get tied up with a social media feed. </p>
         </div>
           </div>
         </div>
@@ -109,30 +110,34 @@
         <div class="card h-100">
           <div class="card-body">
             <img src="./assets/styles/Unique.png" alt="worldwide" width="60">
-            <p>Make connections worldwide Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+            <p>Get creative! Make messages your own with drawing features allowing you to send a personal touch</p>
           </div>
         </div>
     </div>
     </div>
-    <!-- /.row -->
 
-  </div>
-  <!-- /.container -->
+    <div class="card">
+        <div class="card-header">
+          We need your help!
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Spread the word about Penny</h5>
+          <p class="card-text">Follow us on social media, spread the word by sharing our website. This makes a huge difference as we are trying to connect as many people together as possible</p>
+          <div class="container" >
+            <!--Social Media -->
+            <div id="socialmedia">
+            <a href="https://www.facebook.com/login.php?skip_api_login=1&api_key=966242223397117&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fsharer%2Fsharer.php%3Fkid_directed_site%3D0%26u%3Dhttps%253A%252F%252Fdevelopers.facebook.com%252Fdocs%252Fplugins%252F%26display%3Dpopup%26ref%3Dplugin%26src%3Dshare_button&cancel_url=https%3A%2F%2Fwww.facebook.com%2Fdialog%2Fclose_window%2F%3Fapp_id%3D966242223397117%26connect%3D0%23_%3D_&display=popup&locale=en_GB&kid_directed_site=0" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/login" class="fa fa-twitter"></a>
+            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+            <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&width=77&height=28&appId" width="77" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+      
 
-  <!--Social Media -->
-  <a href="#" class="fa fa-facebook"></a>
-  <a href="#" class="fa fa-twitter"></a>
-  <a href="#" class="fa fa-instagram"></a>
 
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Penny&copy;
-
-      </p>
-    </div>
-    <!-- /.container -->
-  </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
